--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ chainlit.md
 
 # Data and databases
 agenthub/agents/youtube/db
+*.db
+*.sqlite3
+instance/
 
 # Archive files and large assets
 **/*.zip
