Restructuracion del proyecto

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,6 @@ __pycache__
 *.pyc
 .git
 .env
-backend/instance/*.db  # No subas la DB local
-backend/venv
+ligapro_manager/instance/*.db  # No subas la DB local
+ligapro_manager/venv
 .venv
